syntax = "proto3";

option go_package = "./tages";

import "google/protobuf/empty.proto";

service Tages {
  rpc UploadFile(stream UploadFileRequest) returns (UploadFileResponse);
  rpc GetFiles (google.protobuf.Empty) returns(GetFileResponse);
  rpc Download (DownloadRequest) returns (stream DownloadResponse);
}

message UploadFileRequest {
  oneof data {
    string mime = 1;
    bytes chunk = 2;
  }
}

message UploadFileResponse {
  string id = 1;
}

message GetFileResponse {
  repeated File files = 1;
}

message File {
  string id = 1;
  string name = 2;
  string created_at = 3;
  string updated_at = 4;
}

message DownloadRequest {
  string id = 1;
}

message DownloadResponse {
  oneof data {
    string mime = 1;
    bytes chunk = 2;
  }
}